--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     body {font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f9f9f9; color: #333;}
     header {background: #0d47a1; color: white; text-align: center; padding: 40px 20px;}
     header img {max-height: 100px;}
-    header h1 {margin: 15px 0 5px; font-size: 36px;}
-    header p {font-size: 18px; margin: 0;}
     section {padding: 40px 20px; max-width: 1000px; margin: auto;}
     h2 {color: #0d47a1; margin-bottom: 20px;}
     .services, .gallery {display: flex; flex-wrap: wrap; gap: 20px;}
@@ -17,8 +15,7 @@
     .gallery img {width: 100%; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);}
     .qr {text-align: center; margin-top: 20px;}
     footer {background: #222; color: white; text-align: center; padding: 20px;}
-    a {color: #0d47a1; text-decoration: none;}
-
+    footer i, footer a {color: #ffffff !important; text-decoration: none;}
     /* Floating WhatsApp Button */
     .whatsapp-float {
       position: fixed;
@@ -34,17 +31,13 @@
       box-shadow: 2px 2px 5px #999;
       z-index: 100;
     }
-    .whatsapp-float i {
-      margin-top: 15px;
-    }
+    .whatsapp-float i {margin-top: 15px;}
   </style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <header>
     <img src="logo.png" alt="Vishwa Graphics Logo">
-    <h1>Vishwa Graphics</h1>
-    <p>PRINTING • DESIGN • BRANDING</p>
   </header>
 
   <section>
@@ -77,8 +70,8 @@
   </section>
 
   <footer>
-    <p>📍 Near Shiv Mandir, Athoorwala, Koti Road, Bhaniawala, Dehradun</p>
-    <p>📞 <a href="tel:+918192892914">+91 81928 92914</a> | <a href="https://wa.me/918192892914">WhatsApp Us</a></p>
+    <p><i class="fa fa-map-marker"></i> Near Shiv Mandir, Athoorwala, Koti Road, Bhaniawala, Dehradun</p>
+    <p><i class="fa fa-phone"></i> <a href="tel:+918192892914">+91 81928 92914</a> | <i class="fa fa-whatsapp"></i> <a href="https://wa.me/918192892914">WhatsApp Us</a></p>
     <p>&copy; 2025 Vishwa Graphics. All Rights Reserved.</p>
   </footer>
 
